tests/NormalTests/paczka1/fuzzy1/48771746.err
Error in line 3: A480 S671 14,9
Error in line 8: f00JsnZFN0 S925 -1,6
Error in line 14: jtfm S925 93,55
Error in line 4: jtfm S671 22,6
Error in line 26: A480 S925 93,2
Error in line 25: rhnkX0j6 S925 58,5
Error in line 21: f00JsnZFN0 A480 70,7
Error in line 19: Whhvl7xCbqA S671 76,7
Error in line 36: A480 S746 36,4
